--- a/index.html
+++ b/index.html
@@ -4,31 +4,72 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./indeks.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="page-header">
+      <nav class="header-navigation">
+        <a class="header-logo" href="./indeks.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <ul class="navigation-list list">
+          <li>
+            <a class="navigation-item" href="" class="navigation-link"
+              >Studio</a
+            >
+          </li>
+          <li>
+            <a
+              class="navigation-item"
+              href="./portfolio.html"
+              class="navigation-link"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a class="navigation-item" href="" class="navigation-link"
+              >Contacts</a
+            >
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address class="header-contacts">
+        <ul class="contacts-list list">
+          <li>
+            <a
+              class="contact-item"
+              href="mailto:info@devstudio.com"
+              class="contact-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              class="contact-item"
+              href="tel:+11(000)1111111"
+              class="contact-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
 
-      <section>
-        <ul>
+      <section class="section">
+        <h2 hidden>Advantages</h2>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -61,7 +102,7 @@
       </section>
       <section>
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -90,7 +131,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/photo.jpg" alt="Mark Guerrero" />
             <h3>Mark Guerrero</h3>
@@ -115,7 +156,7 @@
       </section>
     </main>
     <footer>
-      <ul>
+      <ul class="page-footer list">
         <li><a href="./indeks.html">WebStudio</a></li>
         <li>
           Increase the flow of customers and sales for your business with
