--- a/index.html
+++ b/index.html
@@ -21,40 +21,25 @@
         >
         <ul class="navigation-list list">
           <li>
-            <a class="navigation-item" href="" class="navigation-link"
-              >Studio</a
-            >
+            <a class="navigation-item" href="">Studio</a>
           </li>
           <li>
-            <a
-              class="navigation-item"
-              href="./portfolio.html"
-              class="navigation-link"
-              >Portfolio</a
-            >
+            <a class="navigation-item" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="navigation-item" href="" class="navigation-link"
-              >Contacts</a
-            >
+            <a class="navigation-item" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-contacts">
         <ul class="contacts-list list">
           <li>
-            <a
-              class="contact-item"
-              href="mailto:info@devstudio.com"
-              class="contact-link"
+            <a class="contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a
-              class="contact-item"
-              href="tel:+11(000)1111111"
-              class="contact-link"
+            <a class="contact-item" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -63,45 +48,48 @@
     </header>
     <main>
       <section class="section-hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">
+          Effective Solutions <br />
+          for Your Business
+        </h1>
         <button type="button" class="hero-btn">Order Service</button>
       </section>
 
       <section class="section">
-        <h2 hidden>Advantages</h2>
-        <ul class="list">
+        <h2 hidden class="section-title">Advantages</h2>
+        <ul class="section-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-title">Strategy</h3>
+            <p class="title-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-title">Punctuality</h3>
+            <p class="title-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-title">Diligence</h3>
+            <p class="title-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-title">Technologies</h3>
+            <p class="title-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
+      <section class="what-section">
+        <h2 class="what-title">What are we doing</h2>
         <ul class="list">
           <li>
             <img
@@ -129,36 +117,40 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team-section">
+        <h2 class="our-title">Our Team</h2>
         <ul class="list">
-          <li>
-            <img src="./images/photo.jpg" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+          <li class="team-professions">
+            <img src="./images/photo3.jpg" alt="Mark Guerrero" />
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/photo1.jpg" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-professions">
+            <img src="./images/photo2.jpg" alt="Tom Ford" />
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/photo2.jpg" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+          <li class="team-professions">
+            <img src="./images/photo1.jpg" alt="Camila Garcia" />
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/photo3.jpg" alt="Daniel Wilson" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="team-professions">
+            <img src="./images/photo.jpg" alt="Daniel Wilson" />
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <ul class="page-footer list">
-        <li><a href="./indeks.html">WebStudio</a></li>
+    <footer class="footer">
+      <ul class="footer-list list">
         <li>
+          <a class="footer-logo" href="./indeks.html"
+            >Web<span class="span-logo">Studio</span></a
+          >
+        </li>
+        <li class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </li>
