--- a/portfolio.html
+++ b/portfolio.html
@@ -14,54 +14,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./indeks.html"
-          >Web<span class="logo-span">Studio</span></a
-        >
-        <ul class="navigation-list list">
-          <li>
-            <a class="navigation-item" href="" class="navigation-link"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a
-              class="navigation-item"
-              href="./portfolio.html"
-              class="navigation-link"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a class="navigation-item" href="" class="navigation-link"
-              >Contacts</a
-            >
-          </li>
+    <header>
+      <nav>
+        <a href="./indeks.html">WebStudio</a>
+        <ul>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="header-contacts">
-        <ul class="contacts-list list">
-          <li>
-            <a
-              class="contact-item"
-              href="mailto:info@devstudio.com"
-              class="contact-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="contact-item"
-              href="tel:+11(000)1111111"
-              class="contact-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
     </header>
-
+    <ul>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+    </ul>
     <main>
       <section>
         <h1 hidden>Portfolio</h1>
