--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body>
     <header class="page-header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./indeks.html"
+        <a class="header-logo link" href="./indeks.html"
           >Web<span class="logo-span">Studio</span></a
         >
         <ul class="navigation-list list">
           <li>
-            <a class="navigation-item" href="">Studio</a>
+            <a class="navigation-item" href="./index.html">Studio</a>
           </li>
           <li>
             <a class="navigation-item" href="./portfolio.html">Portfolio</a>
@@ -34,12 +34,12 @@
       <address class="header-contacts">
         <ul class="contacts-list list">
           <li>
-            <a class="contact-item" href="mailto:info@devstudio.com"
+            <a class="contact-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-item" href="tel:+11(000)1111111"
+            <a class="contact-item link" href="tel:+11(000)1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
