--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <footer class="footer">
       <ul class="footer-list list">
         <li>
-          <a class="footer-logo" href="./indeks.html"
+          <a class="footer-logo link" href="./indeks.html"
             >Web<span class="span-logo">Studio</span></a
           >
         </li>
