--- a/portfolio.html
+++ b/portfolio.html
@@ -14,141 +14,165 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./indeks.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="page-header">
+      <nav class="header-navigation">
+        <a class="header-logo link" href="./indeks.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <ul class="navigation-list list">
+          <li><a class="navigation-item" href="./index.html">Studio</a></li>
+          <li>
+            <a class="navigation-item" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="navigation-item" href="">Contacts</a></li>
         </ul>
       </nav>
-    </header>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
-    </ul>
-    <main>
-      <section>
-        <h1 hidden>Portfolio</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-        <ul>
+      <address class="header-contacts">
+        <ul class="contacts-list list">
           <li>
-            <a href="">
+            <a class="contact-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-item link" href="tel:+11(000)1111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="hero-section">
+        <h1 class="title-hero" hidden>Portfolio</h1>
+        <ul class="buttons-list list">
+          <li><button type="button" class="portfolio-button">All</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Web Site</button>
+          </li>
+          <li><button type="button" class="portfolio-button">App</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Design</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="hero-img list">
+          <li>
+            <a class="hero-link link" href="">
               <img
                 src="./images/im.jpg"
                 alt="Interface"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="title-img">Banking App Interface Concept</h2>
+              <p class="hero-text">App</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im1.jpg"
                 alt="QR code"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="title-img">Cashless Payment</h2>
+              <p class="hero-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im2.jpg"
                 alt="Laptop"
                 width="360"
                 height="300"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="title-img">Meditation App</h2>
+              <p class="hero-text">App</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im3.jpg"
                 alt="Phone in the car"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="title-img">Taxi Service</h2>
+              <p class="hero-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im4.jpg"
                 alt="Phone"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="title-img">Screen Illustrations</h2>
+              <p class="hero-text">Design</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img src="./images/im5.jpg" alt="Girl" width="360" height="300" />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="title-img">Online Courses</h2>
+              <p class="hero-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im6.jpg"
                 alt="Instagram Stories"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="title-img">Instagram Stories Concept</h2>
+              <p class="hero-text">Design</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im7.jpg"
                 alt="Organic Food"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="title-img">Organic Food</h2>
+              <p class="hero-text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="hero-link link" href="">
               <img
                 src="./images/im8.jpg"
                 alt="Coffee"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="title-img">Fresh Coffee</h2>
+              <p class="hero-text">Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <ul>
-        <li><a href="./indeks.html">WebStudio</a></li>
+    <footer class="footer">
+      <ul class="footer-list list">
         <li>
+          <a class="footer-logo link" href="./indeks.html"
+            >Web<span class="span-logo">Studio</span></a
+          >
+        </li>
+        <li class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </li>
