--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         </ul>
       </section>
     </main>
+    <!-- Footer -->
     <footer class="footer">
       <ul class="footer-list list">
         <li>
