--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,7 @@
         </ul>
       </section>
     </main>
+    <!-- Footer -->
     <footer>
       <ul>
         <li><a href="./indeks.html">WebStudio</a></li>
