--- a/portfolio.html
+++ b/portfolio.html
@@ -166,17 +166,13 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer-list list">
-        <li>
-          <a class="footer-logo link" href="./indeks.html"
-            >Web<span class="span-logo">Studio</span></a
-          >
-        </li>
-        <li class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </li>
-      </ul>
+      <a class="footer-logo link" href="./indeks.html"
+        >Web<span class="span-logo">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
