--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,11 @@
         <ul class="navigation-list list">
           <li><a class="navigation-item" href="./index.html">Studio</a></li>
           <li>
-            <a class="navigation-item" href="./portfolio.html">Portfolio</a>
+            <a class="navigation-item link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
-          <li><a class="navigation-item" href="">Contacts</a></li>
+          <li><a class="navigation-item link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
