--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         >
         <ul class="navigation-list list">
           <li>
-            <a class="navigation-item" href="./index.html">Studio</a>
+            <a class="navigation-item link" href="./index.html">Studio</a>
           </li>
           <li>
             <a class="navigation-item" href="./portfolio.html">Portfolio</a>
