--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,11 @@
             <a class="navigation-item link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="navigation-item" href="./portfolio.html">Portfolio</a>
+            <a class="navigation-item link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
-          <li><a class="navigation-item" href="">Contacts</a></li>
+          <li><a class="navigation-item link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
